--- a/src/styles/inde.css
+++ b/src/styles/inde.css
@@ -161,5 +161,7 @@
     background-color: white;
     border-radius: 4px;
     align-items: center;
+    margin-top: 400px;
+    padding: 5px;
 
   }
