--- a/src/Dashboard/dashboardstyles/dashboard.css
+++ b/src/Dashboard/dashboardstyles/dashboard.css
@@ -1,9 +1,10 @@
 .dash{
   background-color: rgb(248, 248, 248);
-  width: 69rem;
+  width: 199rem;
   margin-left: auto;
   height: auto;
   align-items: center;
+  background-color: none;
 
 }
 /* Dashboard Styles */
@@ -13,7 +14,7 @@
 }
 
 .dash.expanded {
-  margin-left: 80px; /* When sidebar is collapsed */
+  margin-left: 280px; /* When sidebar is collapsed */
 }
 
 .board-container {
