--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -17,7 +17,6 @@
 .navbar-nav .nav-item .nav-link.active {
   background-color:none; /* Blue background */
   color: white; /* White text color */
-  border-radius: 5px; /* Rounded corners */
   padding: 10px 15px; /* Add some padding for better visuals */
 }
 
@@ -30,7 +29,6 @@
 /* Style for active navbar link */
 .navbar-nav .nav-item .nav-link.active {
   background-color:none; /* Darker blue for hover effect */
-  border-radius: 5px; /* Rounded corners */
   padding: 10px 15px; /* Add some padding for better visuals */
   border: none;
   border-bottom:solid  #e46a07 2px;
@@ -41,4 +39,23 @@
   background-color: none; /* Darker blue for hover effect */
   border: none;
   border-bottom:solid  #e46a07 2px;
+}
+
+
+/* Navbar.css */
+
+/* Style for active menu item */
+.nav-link.active {
+  position: relative;
+  color: #333; /* Keep text color */
+}
+
+.nav-link.active::after {
+  content: "";
+  position: absolute;
+  bottom: -5px; /* Distance between the text and the line */
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: orange; /* Orange line color */
 }
