--- a/src/AdminComponents/Adminstyles/Adminnavbar.css
+++ b/src/AdminComponents/Adminstyles/Adminnavbar.css
@@ -96,3 +96,6 @@
 .notification-item:last-child, .message-item:last-child {
   border-bottom: none;
 }
+.dark-mode .navbar{
+  background-color: #444;
+}
