--- a/src/AdminComponents/Adminstyles/Adminsettings.css
+++ b/src/AdminComponents/Adminstyles/Adminsettings.css
@@ -192,4 +192,12 @@
     font-size: 18px;
     color: #333;
   }
+  body.dark-mode {
+    background-color: #343a40;
+    color: white;
+  }
+  
+  .navbar.dark-mode {
+    background-color: #343a40;
+  }
   
