--- a/src/AdminComponents/Adminstyles/Adminsidebar.css
+++ b/src/AdminComponents/Adminstyles/Adminsidebar.css
@@ -42,7 +42,7 @@
   background-color: transparent;
   border: none;
   font-size: 18px;
-  color: white;
+  color: #343a40 ;
   padding: 0;
   position: absolute;
   top: 20px;
@@ -57,7 +57,7 @@
 .three-dots .dot {
   width: 4px;
   height: 4px;
-  background-color: white;
+  background-color: none;
   border-radius: 50%;
   margin: 2px auto;
 }
@@ -151,4 +151,10 @@
 h4{
   margin-left: 10px;
 }
+
+
+
+
+
+
 
